# pixf

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  NOTICE  README.md  build-debug.sh  build-release.sh  compile_commands.json  iwyu.sh  iwyu_apply.sh  run-debug.sh  run-release.sh
Core/: CMakeLists.txt  Pch.hpp
Core/include/: Flock.hpp  Pixf.hpp
Core/src/: App.cpp  App.hpp  Application.cpp  Application.hpp  Common.hpp  Handle.hpp  Reflect.hpp  Resources.hpp  TypeId.cpp  TypeId.hpp  Window.cpp  Window.hpp  WorldManager.cpp  WorldManager.hpp
Core/src/Application/: Application.cpp  Application.hpp  Context.hpp  Pipeline.cpp  Pipeline.hpp  Stage.hpp  State.hpp
Core/src/Asset/: AssetHandle.hpp  AssetLoader.cpp  AssetLoader.hpp  Assets.hpp  Handle.hpp
Core/src/Assets/: AssetManager.cpp  AssetManager.hpp
Core/src/Audio/: AudioClip.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioListener.hpp  AudioManager.cpp  AudioManager.hpp  AudioPlayer.cpp  AudioPlayer.hpp  AudioSource.hpp  SampleFormat.cpp  SampleFormat.hpp
Core/src/Audio/Ma/: Clip.hpp  ClipStore.cpp  ClipStore.hpp  PlaybackDevice.cpp  PlaybackDevice.hpp  SampleFormat.cpp  SampleFormat.hpp
Core/src/Debug/: Log.hpp  Logger.cpp  Logger.hpp
Core/src/Ecs/: Entity.hpp  Registry.cpp  Registry.hpp  Schedule.cpp  Schedule.hpp  Storage.hpp  World.cpp  World.hpp
Core/src/Entities/: Blueprint.cpp  Blueprint.hpp  ComponentManager.cpp  ComponentManager.hpp  ComponentRegistry.cpp  ComponentRegistry.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Registry.cpp  Registry.hpp  Storage.hpp  System.cpp  System.hpp  SystemRegistry.cpp  SystemRegistry.hpp  SystemsManager.cpp  SystemsManager.hpp  World.cpp  World.hpp  WorldManager.cpp  WorldManager.hpp
Core/src/Entities/Components/: RigidTransform.cpp  RigidTransform.hpp  Transform.cpp  Transform.hpp
Core/src/Entities/Components/Audio/: AudioListener.hpp  AudioSource.hpp
Core/src/Entities/Components/Graphics/: AmbientLight.hpp  Camera.cpp  Camera.hpp  DirectionalLight.hpp  Model.hpp  ModelRenderer.hpp  PointLight.hpp
Core/src/Error/: Error.cpp  Error.hpp  Result.hpp
Core/src/Event/: Event.cpp  Event.hpp  EventHandler.cpp  EventHandler.hpp  EventManager.cpp  EventManager.hpp  EventRegistry.cpp  EventRegistry.hpp
Core/src/File/: File.cpp  File.hpp
Core/src/FileIo/: Audio.cpp  Audio.hpp  File.cpp  File.hpp  Font.cpp  Font.hpp  Image.cpp  Image.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  World.cpp  World.hpp
Core/src/Files/: Audio.cpp  Audio.hpp  File.cpp  File.hpp  Image.cpp  Image.hpp  Model.cpp  Model.hpp
Core/src/Files/Assets/: AssetHandle.hpp  AssetManager.cpp  AssetManager.hpp
Core/src/Glfw/: Window.cpp  Window.hpp
Core/src/Graphics/: Buffer.cpp  Buffer.hpp  Camera.hpp  CubeMap.cpp  CubeMap.hpp  Framebuffer.cpp  Framebuffer.hpp  Gl.cpp  Gl.hpp  Handle.hpp  Image.hpp  ImageData.cpp  ImageData.hpp  Light.hpp  LightingEnvironment.hpp  Material.cpp  Material.hpp  MaterialStore.cpp  MaterialStore.hpp  Mesh.cpp  Mesh.hpp  MeshStore.cpp  MeshStore.hpp  Model.cpp  Model.hpp  ModelRenderer.hpp  Pipeline.cpp  Pipeline.hpp  RenderCommand.hpp  RenderPass.hpp  RenderQueue.cpp  RenderQueue.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Resources.hpp  Shader.cpp  Shader.hpp  ShaderStore.cpp  (+19 more)
Core/src/Graphics/Gl/: Buffer.cpp  Buffer.hpp  Gl.cpp  Gl.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Shader.cpp  Shader.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexLayout.cpp  VertexLayout.hpp  Viewport.cpp  Viewport.hpp  Window.cpp  Window.hpp
Core/src/Gui/: Box.hpp  Button.hpp  Font.hpp  Gui.cpp  Gui.hpp  GuiRenderer.cpp  GuiRenderer.hpp  Image.hpp  Nvg.hpp  Rect.hpp  RectTransform.hpp  Text.hpp
Core/src/Input/: Input.hpp  InputHandler.cpp  InputHandler.hpp  InputManager.cpp  InputManager.hpp
Core/src/Json/: Json.cpp  Json.hpp
Core/src/Math/: Color.hpp  Math.cpp  Math.hpp  Matrix.hpp  Quaternion.hpp  Rect.hpp  RigidTransform.hpp  Transform.hpp  Utils.cpp  Utils.hpp  Vector.hpp
Core/src/Memory/: Buffer.cpp  Buffer.hpp
Core/src/Physics/: Collider.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  RigidBody.hpp
Core/src/Profile/: Timer.cpp  Timer.hpp
Core/src/Serial/: Archive.hpp  GuiRenderArchive.cpp  GuiRenderArchive.hpp  Json.cpp  Json.hpp  JsonArchive.cpp  JsonArchive.hpp  Serial.hpp
Core/src/Serialization/: JsonArchive.hpp  Serializable.hpp  Serialization.hpp
Core/src/Serialization/Json/: Json.hpp
Core/src/Time/: Clock.cpp  Clock.hpp  LocalTime.cpp  LocalTime.hpp  Time.hpp  Timer.cpp  Timer.hpp
Core/src/Uuid/: Uuid.cpp  Uuid.hpp
Core/tests/: Ecs.cpp  EntityManagerTests.cpp
Editor/: CMakeLists.txt
Editor/src/: Console.cpp  Console.hpp  Editor.cpp  Editor.hpp  EditorApplication.cpp  EditorApplication.hpp  Main.cpp
Example/: CMakeLists.txt
Example/src/: App.cpp
Runtime/: CMakeLists.txt
Sandbox/: CMakeLists.txt
docs/: _app_8hpp_source.html  _archive_8hpp_source.html  _asset_loader_8hpp_source.html  _assets_8hpp_source.html  _audio_8hpp_source.html  _audio_clip_8hpp_source.html  _audio_listener_8hpp_source.html  _audio_player_8hpp_source.html  _audio_source_8hpp_source.html  _button_8hpp_source.html  _camera_8hpp_source.html  _collider_8hpp_source.html  _color_8hpp_source.html  _common_8hpp_source.html  _cube_map_8hpp_source.html  _ecs_2_world_8hpp_source.html  _entity_8hpp_source.html  _event_handler_8hpp_source.html  _event_registry_8hpp_source.html  _file_8hpp_source.html  _file_io_2_font_8hpp_source.html  _file_io_2_image_8hpp_source.html  _file_io_2_model_8hpp_source.html  _file_io_2_pipeline_8hpp_source.html  _file_io_2_world_8hpp_source.html  _flock_8hpp_source.html  _framebuffer_8hpp_source.html  _gl_8hpp_source.html  _graphics_2_buffer_8hpp_source.html  _graphics_2_image_8hpp_source.html  _graphics_2_model_8hpp_source.html  _graphics_2_pipeline_8hpp_source.html  _gui_2_font_8hpp_source.html  _gui_2_image_8hpp_source.html  _gui_renderer_8hpp_source.html  _handle_8hpp_source.html  _image_8hpp_source.html  (+344 more)
(+128 files in other folders)
